crates/regent/tests/fail/enum-variant-fields.stderr
error: variant fields are not supported
 --> tests/fail/enum-variant-fields.rs:4:16
  |
4 |     enum A { _0(u32) }
  |                ^^^^^

error: variant fields are not supported
 --> tests/fail/enum-variant-fields.rs:7:16
  |
7 |     enum B { _0(u32, u32) }
  |                ^^^^^^^^^^

error: variant fields are not supported
  --> tests/fail/enum-variant-fields.rs:10:17
   |
10 |     enum C { _0 { a: u32 } }
   |                 ^^^^^^^^^^

error: variant fields are not supported
  --> tests/fail/enum-variant-fields.rs:13:17
   |
13 |     enum D { _0 { a: u32, b: u32 } }
   |                 ^^^^^^^^^^^^^^^^^^

error: variant fields are not supported
  --> tests/fail/enum-variant-fields.rs:16:16
   |
16 |     enum E { _0(u32), _1 }
   |                ^^^^^

error: variant fields are not supported
  --> tests/fail/enum-variant-fields.rs:19:20
   |
19 |     enum F { _0, _1(u32) }
   |                    ^^^^^

error: variant fields are not supported
  --> tests/fail/enum-variant-fields.rs:22:16
   |
22 |     enum G { _0(u32), _1(u32) }
   |                ^^^^^
